2003-08-02  Paolo Ulivi <pulivi@libero.it> and Bradley Bell  <btb@icculus.org>

	* Makefile.am, debian/changelog.in, debian/control,
	debian/d2x-common.dirs, debian/d2x-common.install,
	debian/d2x-common.manpages, debian/d2x-gl.files,
	debian/d2x-gl.menu, debian/d2x-sdl.files, debian/d2x-sdl.menu,
	debian/rules, libmve/Makefile.am, libmve/mveplayer.1,
	utilities/Makefile.am, utilities/hogcreate.1,
	utilities/hogextract.1, utilities/mvlcreate.1,
	utilities/mvlextract.1, utilities/tex2txb.1, utilities/txb2tex.1:
	add man pages, distribute utility programs in new d2x-common deb

	* rpm/d2x.spec.in: updated rpm spec file

2003-08-02  Bradley Bell  <btb@icculus.org>

	* cfile/cfile.c: update raw_position in cfputc and cfputs

2003-08-02  Martin Schaffner  <martin.schaffner@epfl.ch>

	* main/piggy.c: make error message more friendly

	* main/piggy.c: simplify copying of bitmap flags

	* arch/linux/linuxnet.c, main/multi.c, main/multibot.c: bigendian
	networking fixes

	* cfile/cfile.c: revert to always using custom fgets

	* main/endlevel.c, main/mission.c: handle missing exit sequence
	components gracefully

	* main/playsave.c: comments

2003-07-24  Martin Schaffner  <martin.schaffner@epfl.ch>

	* cfile/cfile.c: update raw_position in cfwrite

	* main/network.c: comments/formatting

2003-06-22  Bradley Bell  <btb@icculus.org>

	* cfile/cfile.c: use standard fgets for non-archive files

	* main/movie.c: use con_printf for missing movie warning

2003-06-18  Bradley Bell  <btb@icculus.org>

	* main/movie.c: fixed cfile conversion of movielib code

	* main/console.c, main/hud.c: strip out colors, etc when printing
	to stdout

	* include/u_mem.h: fix NDEBUG calloc macro

2003-06-15  Bradley Bell  <btb@icculus.org>

	* include/fileutil.h, misc/Makefile.am, misc/fileutil.c: removed
	old fileutil stuff

	* 2d/pcx.c, include/strio.h, main/ai.c, main/ai.h,
	main/cntrlcen.c, main/config.c, main/gamesave.c, main/gameseq.c,